# BlogGeneration

./: app.py  main.py  pyproject.toml  request.json
src/graphs/: graph_builder.py
src/llms/: groqllm.py
src/nodes/: blog_node.py
src/states/: blogstate.py
